--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="green2">#00B75F</color>
     <color name="grey">#4D556A</color>
     <color name="purple">#874AFF</color>
+    <color name="red">#FF0000</color>
 </resources>
